# editor

./: Cargo.toml  LICENSE  README.md  Taskfile.yml  example.js
src/: config.rs  cursor.rs  file.rs  lifecycle.rs  main.rs  render.rs  tab.rs
