[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.4.1"
clap = { version = "4.5.0", features = ["derive"] }
sdl2 = { version = "0.36.0", features = ["bundled", "ttf"] }
